# CalcGTest

./: CMakeLists.txt  ICalculator.h  IHistory.h  InMemoryHistory.cpp  InMemoryHistory.h  README.md  SimpleCalculator.cpp  SimpleCalculator.h  calculator_tests.cpp
